--- a/src/pages/index/index.scss
+++ b/src/pages/index/index.scss
@@ -65,8 +65,12 @@
 }
 
 .at-list::after {
-  border-top-width: 0;
   z-index: 10000;
+}
+
+.at-switch {
+  margin-left: 0;
+  padding: 24px;
 }
 
 .at-modal__content {
