增加管理工时功能

--- a/src/app.scss
+++ b/src/app.scss
@@ -12,6 +12,8 @@
 @import "~taro-ui-vue3/dist/style/components/checkbox.scss";
 @import "~taro-ui-vue3/dist/style/components/message.scss";
 @import "~taro-ui-vue3/dist/style/components/flex.scss";
+@import "taro-ui-vue3/dist/style/components/card.scss";
 
 @import "pages/about/index.scss";
 @import "pages/index/index.scss";
+@import "pages/manage/index.scss";
